fixing some colors on my selects and added overflow to POI description on map popup

--- a/LegendLore/client/legendlore/src/components/Campaigns/Campaign.css
+++ b/LegendLore/client/legendlore/src/components/Campaigns/Campaign.css
@@ -171,6 +171,8 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 8px;
+  background-color: #284B63;
+  color: whitesmoke;
 }
 
 .map-select-modal-body {
