--- a/LegendLore/client/legendlore/src/components/Campaigns/CampaignMap.css
+++ b/LegendLore/client/legendlore/src/components/Campaigns/CampaignMap.css
@@ -38,10 +38,19 @@ color: whitesmoke;
   background-color: #153243;
 
 }
+
 .poi-popup-subtitle {
   font-size: 16px;
-  color: whitesmoke; /* Use any desired color for the description text */
+  color: whitesmoke;
+  overflow: auto;
+  max-height: 60px;
 }
+
+.poi-popup-subtitle::-webkit-scrollbar {
+  width: 0;
+  background-color: transparent;
+}
+
 .leaflet-container {
   height: 80vh;
   width: 80vw;
